Fix some imports