@@ -4,12 +4,11 @@ import com.krstf.newsfeed.domain.models.Article;
 import com.krstf.newsfeed.domain.models.Source;
 import com.krstf.newsfeed.port.outbound.repository.ArticleLoader;
 import com.rometools.rome.feed.synd.SyndCategory;
-import org.springframework.stereotype.Service;
-
 import com.rometools.rome.feed.synd.SyndEntry;
 import com.rometools.rome.feed.synd.SyndFeed;
 import com.rometools.rome.io.SyndFeedInput;
 import com.rometools.rome.io.XmlReader;
+import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
@@ -49,12 +48,12 @@ public class RSSLoader implements ArticleLoader {
 
     private List<String> extractCategories(SyndEntry entry) {
         List<SyndCategory> categories = entry.getCategories();
-        return categories.stream().map(c -> c.getName()).toList();
+        return categories.stream().map(SyndCategory::getName).toList();
     }
 
     private String extractContent(SyndEntry entry) {
         if (entry.getContents() != null && !entry.getContents().isEmpty()) {
-            return entry.getContents().get(0).getValue();
+            return entry.getContents().getFirst().getValue();
         }
         if (entry.getDescription() != null) {
             return entry.getDescription().getValue();
